[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonTools"
version = "0.1.0"
description = "Shared cross-platform utilities for Linktech Engineering tooling ecosystem."
authors = [
    { name = "Leon McClatchey", email = "ldmcclatchey@linktechengineering.net" }
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Add real deps later if needed
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PythonTools*"]
exclude = ["tests*", "data*", "archive*"]
