[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PythonTools"
dynamic = ["version"]
description = "Shared cross-platform utilities for Linktech Engineering tooling ecosystem."
authors = [
    { name = "Leon McClatchey", email = "ldmcclatchey@linktechengineering.net" }
]
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    # Add real deps later if needed
]
[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["PythonTools*"]
exclude = ["tests*", "data*", "archive*"]
